--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "electrocli",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
