--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/cli-table": "^0.3.0",
     "cli-table": "^0.3.1",
+    "colors": "^1.4.0",
     "commander": "^6.1.0",
     "electrodb": "^0.9.19",
     "handlebars": "^4.7.6"
