--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electrocli",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "",
   "main": "dist/bin/index.js",
   "types": "dist/bin/index.d.ts",
@@ -26,14 +26,14 @@
   ],
   "dependencies": {
     "@types/cli-table": "0.3.0",
-    "@types/express": "^4.17.8",
-    "aws-sdk": "^2.781.0",
-    "body-parser": "^1.19.0",
+    "@types/express": "4.17.8",
+    "aws-sdk": "2.781.0",
+    "body-parser": "1.19.0",
     "cli-table": "0.3.1",
     "colors": "1.4.0",
     "commander": "6.1.0",
-    "electrodb": "^0.9.23",
-    "express": "^4.17.1",
+    "electrodb": "0.9.31",
+    "express": "4.17.1",
     "handlebars": "4.7.6"
   }
 }
