--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electrocli",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "",
   "main": "dist/bin/index.js",
   "types": "dist/bin/index.d.ts",
@@ -32,7 +32,7 @@
     "cli-table": "0.3.1",
     "colors": "1.4.0",
     "commander": "6.1.0",
-    "electrodb": "0.9.31",
+    "electrodb": "^0.9.31",
     "express": "4.17.1",
     "handlebars": "4.7.6"
   }
