--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electrocli",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "description": "",
   "main": "dist/bin/index.js",
   "types": "dist/bin/index.d.ts",
@@ -9,7 +9,7 @@
     "electro": "dist/bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register ./test/**.spec.ts"
   },
   "author": "Tyler W. Walch",
   "license": "ISC",
@@ -42,6 +42,16 @@
     "commander": "6.1.0",
     "electrodb": "^0.9.31",
     "express": "4.17.1",
-    "handlebars": "4.7.6"
+    "handlebars": "4.7.6",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "coveralls": "^3.1.0",
+    "mocha": "^8.1.3",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.0.0",
+    "source-map-support": "^0.5.19",
+    "typescript": "^4.0.2"
   }
 }
