--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electrocli",
-  "version": "0.3.11",
+  "version": "0.4.0",
   "description": "",
   "main": "dist/bin/index.js",
   "types": "dist/bin/index.d.ts",
@@ -24,7 +24,10 @@
     "coveralls": "^3.1.0",
     "mocha": "^8.2.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "@types/cli-table": "0.3.0",
+    "@types/express": "4.17.8",
+    "source-map-support": "^0.5.19"
   },
   "keywords": [
     "electrodb",
@@ -33,25 +36,15 @@
     "aws"
   ],
   "dependencies": {
-    "@types/cli-table": "0.3.0",
-    "@types/express": "4.17.8",
     "aws-sdk": "2.781.0",
     "body-parser": "1.19.0",
     "cli-table": "0.3.1",
     "colors": "1.4.0",
     "commander": "6.1.0",
-    "electrodb": "^0.9.31",
+    "electrodb": "^0.9.38",
     "express": "4.17.1",
     "handlebars": "4.7.6",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.12",
-    "@types/mocha": "^8.0.3",
-    "coveralls": "^3.1.0",
-    "mocha": "^8.1.3",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^15.1.0",
     "ts-node": "^9.0.0",
-    "source-map-support": "^0.5.19",
     "typescript": "^4.0.2"
   }
 }
